# studio-researcher-agent

./: .env.sample  .gitignore  README.md  langgraph.json  pyproject.toml
src/: agent.py  extract-arxiv.py  main.py
src/config/: settings.py
src/files/: arxiv_dataset.json
src/services/: llmprovider.py
src/utils/: nodes.py  state.py  tools.py
tests/: test_main.py
