[project]
name = "studio-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.10",
    "langchain>=0.3.9",
    "langgraph-cli[inmem]==0.1.55",
    "langgraph>=0.2.53",
    "python-dotenv>=1.0.1",
]


[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = "src"
