[project]
name = "studio-researcher-agent"
version = "0.1.0"
description = "researcher-agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-search-results>=2.4.2",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.9",
    "langchain-ollama>=0.2.1",
    "langchain-openai>=0.2.10",
    "langchain>=0.3.9",
    "langgraph-cli[inmem]==0.1.55",
    "langgraph>=0.2.53",
    "pandas>=2.2.3",
    "pinecone>=5.4.1",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.1",
]


[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = "src"
